gen/composer/v1beta1/generator-errors.log
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on build directory
    Checking google-composer1_beta1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/composer/v1beta1/lib)
error[E0423]: expected value, found struct `locations::LocationsActions`
   --> gen/composer/v1beta1/lib/src/lib.rs:803:13
    |
803 |             locations::LocationsActions
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `locations::LocationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `environments::EnvironmentsActions`
   --> gen/composer/v1beta1/lib/src/lib.rs:815:17
    |
815 |                 environments::EnvironmentsActions
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `environments::EnvironmentsActions { /* fields */ }`?

error[E0423]: expected value, found struct `image_versions::ImageVersionsActions`
   --> gen/composer/v1beta1/lib/src/lib.rs:819:17
    |
819 |                 image_versions::ImageVersionsActions
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `image_versions::ImageVersionsActions { /* fields */ }`?

error[E0423]: expected value, found struct `operations::OperationsActions`
   --> gen/composer/v1beta1/lib/src/lib.rs:823:17
    |
823 |                 operations::OperationsActions
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `operations::OperationsActions { /* fields */ }`?

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-composer1_beta1`.

To learn more, run the command again with --verbose.
